force-app/main/default/objects/Consent_Display_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Display_Description__c</fullName>
        <label>Display Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Label__c</fullName>
        <label>Display Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Field__c</fullName>
        <label>Source Field</label>
        <metadataRelationshipControllingField>Consent_Display_Mapping__mdt.Source_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Consent_Display_Labels</relationshipLabel>
        <relationshipName>Consent_Display_Labels</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <label>Source Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Consent_Display_Labels</relationshipLabel>
        <relationshipName>Consent_Display_Labels</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Consent Display Mapping</label>
    <pluralLabel>Consent Display Mappings</pluralLabel>
</CustomObject>